golf2.0 up and running

--- a/data-pipeline.ipynb
+++ b/data-pipeline.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -403,17 +403,24 @@
     "      having count(score) > 50\n",
     "      order by year, avg_score;\n",
     "'''\n",
-    "exec_sql(sqlTxt)"
+    "exec_sql(sqlTxt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sqlTxt = '''\n",
+    "DROP VIEW IF EXISTS rank_view;\n",
+    "CREATE VIEW rank_view AS\n",
+    "select year, player_id, ROW_NUMBER() over (order by avg_score) from stats_view;\n",
+    "'''\n",
+    "exec_sql(sqlTxt)"
+   ]
   },
   {
    "cell_type": "code",
