--- a/pystan-readme.ipynb
+++ b/pystan-readme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -97,19 +97,43 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-fc16b8a70f38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_posterior_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'fit' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inference for Stan model: anon_model_95013624776d537c3cd7cd4d641c30e0.\n",
+      "4 chains, each with iter=1000; warmup=500; thin=1; \n",
+      "post-warmup draws per chain=500, total post-warmup draws=2000.\n",
+      "\n",
+      "           mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
+      "mu          8.5    0.23   5.19  -0.66   5.16   8.22  11.63  20.17  492.0   1.01\n",
+      "tau        6.75    0.27   5.84   0.28   2.59   5.37   9.39  21.14  480.0    1.0\n",
+      "eta[0]     0.35    0.02   0.88   -1.4  -0.24   0.37   0.94   1.99 1981.0    1.0\n",
+      "eta[1]    -0.04    0.02   0.88  -1.76  -0.63  -0.04   0.53   1.77 1959.0    1.0\n",
+      "eta[2]    -0.21    0.02   0.92  -2.01  -0.81   -0.2   0.41   1.61 2000.0    1.0\n",
+      "eta[3]    -0.07    0.02    0.9  -1.81  -0.69  -0.08   0.54   1.69 2000.0    1.0\n",
+      "eta[4]    -0.38    0.02   0.84  -2.04  -0.96  -0.38   0.18   1.31 1675.0    1.0\n",
+      "eta[5]    -0.21    0.02   0.85  -1.77  -0.79  -0.24   0.35   1.58 2000.0    1.0\n",
+      "eta[6]     0.29    0.02   0.92  -1.55  -0.29    0.3   0.89   2.03 1880.0   1.01\n",
+      "eta[7]     0.03    0.02    0.9  -1.78  -0.59   0.03   0.66    1.8 1793.0    1.0\n",
+      "theta[0]  11.65    0.26    8.4   -1.8   6.21  10.49   15.7  32.85 1078.0    1.0\n",
+      "theta[1]   8.01    0.14    6.1  -3.77   4.26   8.15  11.78  20.72 2000.0    1.0\n",
+      "theta[2]   6.57    0.22   8.02  -11.9   2.47   6.96   11.4  21.98 1357.0    1.0\n",
+      "theta[3]   7.77    0.15   6.63  -6.02   3.71   7.81  11.86  21.76 2000.0    1.0\n",
+      "theta[4]   5.39    0.14   6.38  -8.38   1.57   5.65   9.83   16.8 2000.0    1.0\n",
+      "theta[5]   6.63    0.14   6.38  -6.92   2.87   6.82   10.8   18.9 2000.0    1.0\n",
+      "theta[6]  10.88    0.19   6.77  -0.65   6.25   10.5  14.77  26.62 1321.0    1.0\n",
+      "theta[7]   8.71     0.2   7.53  -6.51   4.22   8.53   12.9  25.54 1382.0    1.0\n",
+      "lp__      -4.71    0.12   2.62 -10.34  -6.23  -4.51  -2.89  -0.25  507.0   1.01\n",
+      "\n",
+      "Samples were drawn using NUTS at Thu Aug  3 13:24:36 2017.\n",
+      "For each parameter, n_eff is a crude measure of effective sample size,\n",
+      "and Rhat is the potential scale reduction factor on split chains (at \n",
+      "convergence, Rhat=1).\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "print fit\n"
    ]
   },
   {
