--- a/plotly-examples.ipynb
+++ b/plotly-examples.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -24,78 +26,93 @@
     "from plotly import __version__\n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "import plotly.plotly as py\n",
+    "import plotly.tools as tls\n",
     "import plotly.figure_factory as ff\n",
     "import plotly.graph_objs as go\n",
-    "init_notebook_mode(connected=True)"
+    "init_notebook_mode(connected=True)\n",
+    "import util\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~jamie.bernardin/9.embed\" height=\"3080px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sqlTxt = '''\n",
     "select * from stats_view limit 100;\n",
     "'''\n",
-    "df = pd_from_sql(sqlTxt)\n",
+    "df = util.pd_from_sql(sqlTxt)\n",
     "table = ff.create_table(df)\n",
     "py.iplot(table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~jamie.bernardin/3.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
       "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
+       "u'https://plot.ly/~jamie.bernardin/13'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = [\n",
-    "    go.Scatter(\n",
-    "        x=[0, 1, 2],\n",
-    "        y=[6, 10, 2],\n",
-    "        error_y=dict(\n",
-    "            type='data',\n",
-    "            array=[1, 2, 3],\n",
-    "            visible=True\n",
-    "        )\n",
-    "    )\n",
-    "]\n",
+    "mpl_fig = plt.figure()\n",
+    "# --> your matplotlib methods <--\n",
+    "plt.plot(range(0, len (df)), df['avg_sg_tee'])\n",
+    "plotly_fig = tls.mpl_to_plotly(mpl_fig)\n",
     "\n",
-    "py.iplot(data, filename='basic-error-bar')"
+    "py.plot(plotly_fig)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
