initial cut on strokes gained regression

--- a/data-pipeline.ipynb
+++ b/data-pipeline.ipynb
@@ -12,8 +12,7 @@
    "source": [
     "import util\n",
     "%precision 4\n",
-    "%matplotlib inline\n",
-    "\n"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -434,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -481,11 +480,11 @@
     " \n",
     "LANGUAGE plpgsql;\n",
     "'''\n",
-    "exec_sql(sqlTxt)\n",
-    "exec_sql(\"select update_strokes_gained('Off the Tee', 'sg_tee')\")\n",
-    "exec_sql(\"select update_strokes_gained('Approach to the Green', 'sg_approach')\")\n",
-    "exec_sql(\"select update_strokes_gained('Around the Green', 'sg_around')\")\n",
-    "exec_sql(\"select update_strokes_gained('Putting', 'sg_putting')\")"
+    "util.exec_sql(sqlTxt)\n",
+    "util.exec_sql(\"select update_strokes_gained('Off the Tee', 'sg_tee')\")\n",
+    "util.exec_sql(\"select update_strokes_gained('Approach to the Green', 'sg_approach')\")\n",
+    "util.exec_sql(\"select update_strokes_gained('Around the Green', 'sg_around')\")\n",
+    "util.exec_sql(\"select update_strokes_gained('Putting', 'sg_putting')\")"
    ]
   },
   {
