--- a/golf-2.0-reporting.ipynb
+++ b/golf-2.0-reporting.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -34,13 +34,23 @@
     "  from  tournaments t, stan_tournaments st \n",
     "  where t.permanent_tournament_id = st.permanent_tournament_id\n",
     "    and t.year = st.year\n",
+    "    order by tag, st.year \n",
     "'''\n",
     "t_df = util.pd_from_sql(sqlTxt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -89,6 +99,33 @@
        "      <td>(3.672,0.007,0.327)</td>\n",
        "      <td>(-0.485,0.022,0.962)</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>Dustin Johnson</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(69.447,0.042,0.57)</td>\n",
+       "      <td>(3.688,0.007,0.331)</td>\n",
+       "      <td>(-0.295,0.023,1.008)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683</th>\n",
+       "      <td>Dustin Johnson</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(69.749,0.012,0.54)</td>\n",
+       "      <td>(3.523,0.007,0.329)</td>\n",
+       "      <td>(-0.423,0.022,0.992)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>729</th>\n",
+       "      <td>Dustin Johnson</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(70.105,0.015,0.659)</td>\n",
+       "      <td>(3.654,0.009,0.42)</td>\n",
+       "      <td>(0.678,0.021,0.956)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -98,14 +135,20 @@
        "29   Dustin Johnson  2014  top-200  (70.058,0.059,0.624)  (3.653,0.013,0.435)   \n",
        "233  Dustin Johnson  2015  top-200  (69.598,0.036,0.508)  (3.548,0.008,0.346)   \n",
        "402  Dustin Johnson  2016  top-200  (69.252,0.046,0.527)  (3.672,0.007,0.327)   \n",
+       "602  Dustin Johnson  2016   top-50   (69.447,0.042,0.57)  (3.688,0.007,0.331)   \n",
+       "683  Dustin Johnson  2015   top-50   (69.749,0.012,0.54)  (3.523,0.007,0.329)   \n",
+       "729  Dustin Johnson  2014   top-50  (70.105,0.015,0.659)   (3.654,0.009,0.42)   \n",
        "\n",
        "                     beta  \n",
        "29    (0.658,0.022,0.964)  \n",
        "233  (-0.493,0.022,0.966)  \n",
-       "402  (-0.485,0.022,0.962)  "
+       "402  (-0.485,0.022,0.962)  \n",
+       "602  (-0.295,0.023,1.008)  \n",
+       "683  (-0.423,0.022,0.992)  \n",
+       "729   (0.678,0.021,0.956)  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -157,18 +209,42 @@
        "      <td>top-200</td>\n",
        "      <td>(2.007,0.049,0.311)</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>THE PLAYERS Championship</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(1.791,0.041,0.417)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>THE PLAYERS Championship</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(2.273,0.033,0.407)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>THE PLAYERS Championship</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>top-50</td>\n",
+       "      <td>(1.567,0.047,0.407)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        name  year      tag                alpha\n",
-       "1   THE PLAYERS Championship  2014  top-200  (1.867,0.065,0.354)\n",
-       "42  THE PLAYERS Championship  2015  top-200   (2.26,0.039,0.273)\n",
-       "83  THE PLAYERS Championship  2016  top-200  (2.007,0.049,0.311)"
+       "                         name  year      tag                alpha\n",
+       "1    THE PLAYERS Championship  2014  top-200  (1.867,0.065,0.354)\n",
+       "42   THE PLAYERS Championship  2015  top-200   (2.26,0.039,0.273)\n",
+       "83   THE PLAYERS Championship  2016  top-200  (2.007,0.049,0.311)\n",
+       "123  THE PLAYERS Championship  2016   top-50  (1.791,0.041,0.417)\n",
+       "163  THE PLAYERS Championship  2015   top-50  (2.273,0.033,0.407)\n",
+       "201  THE PLAYERS Championship  2014   top-50  (1.567,0.047,0.407)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
