finished stan regression fo strokes gained

--- a/data-pipeline.ipynb
+++ b/data-pipeline.ipynb
@@ -563,6 +563,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sqlTxt = '''\n",
+    "DROP TABLE IF EXISTS stan_sg_tournaments CASCADE;\n",
+    "CREATE TABLE stan_sg_tournaments (\n",
+    "     permanent_tournament_id     integer,\n",
+    "     year                        integer,\n",
+    "     tag                     varchar(50),\n",
+    "     b_offset                      stat,\n",
+    "     b_tee                         stat,\n",
+    "     b_approach                    stat,\n",
+    "     b_around                      stat,\n",
+    "     b_putting                     stat,\n",
+    "     primary key (permanent_tournament_id, year, tag) \n",
+    ");\n",
+    "'''\n",
+    "util.exec_sql(sqlTxt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "metadata": {
     "collapsed": false,
