--- a/golf-3.0-reporting.ipynb
+++ b/golf-3.0-reporting.ipynb
@@ -25,28 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "year = 2014\n",
-    "tag = 'sg-200'\n",
-    "sqlTxt = '''\n",
-    "select permanent_tournament_id, (b_offset).mean, (b_tee).mean as tee, \n",
-    "       (b_approach).mean as approach, (b_around).mean as around, \n",
-    "       (b_putting).mean as putting \n",
-    "    from stan_sg_tournaments\n",
-    "    where year = %s\n",
-    "      and tag = %s;\n",
-    "'''\n",
-    "t_df = util.pd_from_sql(sqlTxt, [year, tag])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +39,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>permanent_tournament_id</th>\n",
-       "      <th>mean</th>\n",
+       "      <th>offset</th>\n",
        "      <th>tee</th>\n",
        "      <th>approach</th>\n",
        "      <th>around</th>\n",
@@ -397,7 +376,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    permanent_tournament_id    mean    tee  approach  around  putting\n",
+       "    permanent_tournament_id  offset    tee  approach  around  putting\n",
        "0                        10  70.953 -1.262    -1.239  -1.025   -1.022\n",
        "1                        11  71.660 -1.258    -1.187  -1.051   -0.996\n",
        "2                        20  72.318 -1.367    -1.111  -1.074   -1.009\n",
@@ -436,43 +415,102 @@
        "35                       30  71.455 -1.153    -1.097  -1.073   -0.989"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "year = 2014\n",
+    "tag = 'sg-200'\n",
+    "sqlTxt = '''\n",
+    "select permanent_tournament_id, (b_offset).mean as offset, (b_tee).mean as tee, \n",
+    "       (b_approach).mean as approach, (b_around).mean as around, \n",
+    "       (b_putting).mean as putting \n",
+    "    from stan_sg_tournaments\n",
+    "    where year = %s\n",
+    "      and tag = %s;\n",
+    "'''\n",
+    "t_df = util.pd_from_sql(sqlTxt, [year, tag])\n",
     "t_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sg_map = {}\n",
+    "for row in t_df.as_matrix():\n",
+    "    sg_map[int(row[0])] = row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "year = 2014\n",
-    "player = 'Jordan Spieth'\n",
+    "tag = 'sg-200'\n",
+    "limit = 200\n",
     "sqlTxt = '''\n",
-    "select permanent_tournament_id, round, score, sg_tee, sg_approach, sg_around, sg_putting\n",
-    "     from scores s, players p\n",
-    "    where s.player_id = p.player_id\n",
-    "      and year = %s\n",
-    "      and name = %s;\n",
+    "select * from (select year, player_id, row_number from rank_view where year = %s  limit %s) r \n",
+    "    join scores_view s \n",
+    "    using (player_id, year) order by r.row_number, player_id, year, permanent_tournament_id, round;\n",
     "'''\n",
-    "p_df = util.pd_from_sql(sqlTxt, [year, player])"
+    "p_df = util.pd_from_sql(sqlTxt, [year, limit])\n",
+    "p_df = p_df[(pd.notnull(p_df['sg_approach'])) & (pd.notnull(p_df['sg_around']))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "player_scores = p_df.as_matrix()\n",
+    "player_id = [row[0] for row in player_scores ]\n",
+    "actuals = [row[6] for row in player_scores]\n",
+    "def compute_score(row):\n",
+    "    sg = sg_map[int(row[4])]\n",
+    "    return sg[1] + row[7]*sg[2] + row[8]*sg[3] + row[9]*sg[4] + row[10]*sg[5]\n",
+    "\n",
+    "estimated = [compute_score(row) for row in player_scores]\n",
+    "comp_df = pd.DataFrame({'player_id': player_id, 'actuals':actuals, 'estimated': estimated})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0063120265123545417"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for row in comp_df.as_matrix():\n",
+    "    total += row[0]-row[1]\n",
+    "total/len(comp_df)"
+   ]
   },
   {
    "cell_type": "code",
