refactoring, removed segments and beta slope

--- a/data-pipeline.ipynb
+++ b/data-pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -489,36 +489,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "sqlTxt = '''\n",
-    "DROP TABLE IF EXISTS stan_players CASCADE;\n",
-    "CREATE TABLE stan_players (\n",
-    "     player_id     integer,\n",
-    "     year          integer,\n",
-    "     tau_mean      float,\n",
-    "     tau_se        float,\n",
-    "     sigma_mean    float,\n",
-    "     sigma_se      float,\n",
-    "     beta_mean     float,\n",
-    "     beta_se       float,\n",
-    "     primary key (player_id, year) \n",
-    ");\n",
-    "'''\n",
-    "util.exec_sql(sqlTxt)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -540,9 +515,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -554,7 +531,6 @@
     "     tag           varchar(50),\n",
     "     tau           stat,\n",
     "     sigma         stat,\n",
-    "     beta          stat,\n",
     "     primary key (player_id, year, tag) \n",
     ");\n",
     "'''\n",
@@ -565,7 +541,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -590,7 +568,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
