almost up and running

--- a/golf-4.0-stan.ipynb
+++ b/golf-4.0-stan.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pystan\n",
+    "from pystan import StanModel\n",
     "import util\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -16,12 +16,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_scores = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "code = '''\n",
+    "data {\n",
+    "    int sg_n;\n",
+    "    int<lower=2> N;\n",
+    "    matrix[sg_n,N] y;\n",
+    "    vector[sg_n+1] s_coef;\n",
+    "}\n",
+    "parameters {\n",
+    "    vector[sg_n] alpha;\n",
+    "    vector[sg_n] beta;\n",
+    "    vector<lower=0>[sg_n] sigma;\n",
+    "    vector[sg_n] y_tilda;\n",
+    "} \n",
+    "model {\n",
+    "    for (k in 1:sg_n) {\n",
+    "        for (n in 2:N) {\n",
+    "            y[k][n] ~ normal(alpha[k]+ beta[k] * y[k][n-1], sigma[k]);\n",
+    "        }\n",
+    "    }\n",
+    "    for (j in 1:sg_n) {\n",
+    "        y_tilda[j] ~ normal(alpha[j]+ beta[j] * y[j][N], sigma[j]);\n",
+    "    }\n",
+    "}\n",
+    "generated quantities {\n",
+    "    real score_predict;\n",
+    "    score_predict = s_coef[1] + s_coef[2]*y_tilda[1] + s_coef[3]*y_tilda[2] \n",
+    "                + s_coef[4]*y_tilda[3] + s_coef[5]*y_tilda[4];\n",
+    "}\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "sqlTxt = '''\n",
     "select player_id from stats_view where year = 2016 limit 50;\n",
     "'''\n",
@@ -30,39 +82,38 @@
     "sqlTxt = '''\n",
     "select permanent_tournament_id, (b_offset).mean as offset,\n",
     "       (b_tee).mean as tee, (b_approach).mean as approach, \n",
-    "       (b_around).mean as around, (b_putting).mean \n",
+    "       (b_around).mean as around, (b_putting).mean as putting\n",
     "       from stan_sg_tournaments \n",
     "       where year = 2016 \n",
     "       and tag like 'sg-200';\n",
     "'''\n",
-    "tournaments = util.pd_from_sql(sqlTxt).set_index(['permanent_tournament_id']).T.to_dict('list')\n"
+    "t_df = util.pd_from_sql(sqlTxt)\n",
+    "sg_coef_map = t_df.set_index(['permanent_tournament_id']).T.to_dict('list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p_sqlTxt = '''\n",
+    "select name, permanent_tournament_id, round, scores.sg_tee as tee, scores.sg_approach as approach, \n",
+    "       scores.sg_around as around, scores.sg_putting as putting \n",
+    "    from scores, players \n",
+    "    where year = %s \n",
+    "      and scores.player_id = %s \n",
+    "      and scores.player_id = players.player_id\n",
+    "      and scores.sg_putting is not null\n",
+    "      order by date;\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "sqlTxt = '''\n",
-    "select name, permanent_tournament_id, round, scores.sg_tee as tee, scores.sg_approach as approach, \n",
-    "       scores.sg_around as around, scores.sg_putting as putting from scores, players \n",
-    "    where year = %s \n",
-    "      and player_id = %s \n",
-    "      and scores.player_id = players.player_id\n",
-    "      and scores.sg_putting is not null\n",
-    "      order by date;\n",
-    "'''\n",
-    "players_df = util.pd_from_sql(sqlTxt, [year, p_id])\n",
-    "y = [players_df[sg].as_matrix() for sg in['tee', 'approach', 'around', 'tee'] ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -71,105 +122,75 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_5ba58b23c8ed993b96402931dd3cdf47 NOW.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inference for Stan model: anon_model_5ba58b23c8ed993b96402931dd3cdf47.\n",
-      "4 chains, each with iter=1000; warmup=500; thin=1; \n",
-      "post-warmup draws per chain=500, total post-warmup draws=2000.\n",
-      "\n",
-      "                   mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
-      "alpha[0,0]         0.36  4.7e-3   0.21  -0.05   0.22   0.35   0.49   0.79 2000.0    1.0\n",
-      "alpha[1,0]         0.02  8.0e-3   0.36  -0.67  -0.22   0.02   0.26   0.74 2000.0    1.0\n",
-      "alpha[2,0]         0.66  4.3e-3   0.19   0.29   0.54   0.67   0.79   1.06 2000.0    1.0\n",
-      "alpha[3,0]         0.34  4.7e-3   0.21  -0.08    0.2   0.34   0.48   0.76 2000.0    1.0\n",
-      "alpha[0,1]         0.38  4.5e-3    0.2  -0.03   0.25   0.39   0.52   0.76 2000.0    1.0\n",
-      "alpha[1,1]         0.38  7.9e-3   0.35  -0.33   0.14   0.39   0.62   1.07 2000.0    1.0\n",
-      "alpha[2,1]        -0.02  3.7e-3   0.17  -0.35  -0.13  -0.02   0.08    0.3 2000.0    1.0\n",
-      "alpha[3,1]         0.38  4.5e-3    0.2-7.3e-3   0.25   0.38   0.51   0.77 2000.0    1.0\n",
-      "beta[0]            0.27  3.0e-3   0.13 5.8e-3   0.19   0.28   0.36   0.52 2000.0    1.0\n",
-      "beta[1]            0.01  3.0e-3   0.14  -0.25  -0.08   0.01   0.11   0.27 2000.0    1.0\n",
-      "beta[2]            0.08  3.1e-3   0.14  -0.19-7.8e-3   0.08   0.18   0.36 2000.0    1.0\n",
-      "beta[3]            0.28  2.9e-3   0.13   0.03   0.19   0.28   0.37   0.54 2000.0    1.0\n",
-      "sigma[0]           1.02  2.3e-3    0.1   0.85   0.95   1.01   1.09   1.26 2000.0    1.0\n",
-      "sigma[1]           1.85  4.1e-3   0.18   1.54   1.73   1.84   1.96   2.26 2000.0    1.0\n",
-      "sigma[2]           0.89  2.1e-3   0.09   0.73   0.83   0.88   0.95    1.1 2000.0    1.0\n",
-      "sigma[3]           1.02  2.3e-3    0.1   0.84   0.95   1.02   1.09   1.25 2000.0    1.0\n",
-      "y_tilda[0,0]        0.4    0.02   1.03  -1.56   -0.3   0.38   1.09   2.53 2000.0    1.0\n",
-      "y_tilda[1,0]        0.4    0.04   1.86  -3.11  -0.83   0.39   1.61   4.09 2000.0    1.0\n",
-      "y_tilda[2,0]      -0.07    0.02   0.95  -1.98  -0.73  -0.08   0.58   1.78 2000.0    1.0\n",
-      "y_tilda[3,0]       0.41    0.02   1.04  -1.62   -0.3   0.41   1.11   2.43 2000.0    1.0\n",
-      "y_tilda[0,1]       0.48    0.02    1.1  -1.66  -0.25   0.48   1.21   2.69 2000.0    1.0\n",
-      "y_tilda[1,1]       0.43    0.04   1.99  -3.42  -0.92   0.38   1.75   4.36 2000.0    1.0\n",
-      "y_tilda[2,1]      -0.03    0.02   0.96  -1.94  -0.66-8.8e-3    0.6   1.88 2000.0    1.0\n",
-      "y_tilda[3,1]       0.51    0.02   1.11  -1.68  -0.24    0.5   1.29   2.65 2000.0    1.0\n",
-      "y_tilda[0,2]       0.51    0.02   1.09  -1.62  -0.24   0.54   1.21   2.65 2000.0    1.0\n",
-      "y_tilda[1,2]        0.3    0.04   1.95  -3.57  -0.94   0.31   1.57   4.03 2000.0    1.0\n",
-      "y_tilda[2,2]      -0.02    0.02   0.93  -1.83  -0.64  -0.04   0.56   1.88 2000.0    1.0\n",
-      "y_tilda[3,2]       0.51    0.03   1.14  -1.78  -0.24   0.51   1.27   2.75 2000.0    1.0\n",
-      "y_tilda[0,3]       0.52    0.02   1.11  -1.71  -0.22   0.49   1.25   2.78 2000.0    1.0\n",
-      "y_tilda[1,3]       0.45    0.04   1.88  -3.38  -0.75   0.44   1.74   4.06 2000.0    1.0\n",
-      "y_tilda[2,3]      -0.02    0.02   0.91  -1.85  -0.62  -0.02   0.58   1.73 2000.0    1.0\n",
-      "y_tilda[3,3]       0.53    0.03   1.12  -1.57  -0.22   0.53   1.25   2.84 2000.0    1.0\n",
-      "score_predict[0]  70.44    0.06   2.65  65.07  68.67  70.42  72.27  75.56 2000.0    1.0\n",
-      "score_predict[1]  70.19    0.06   2.68  65.06  68.31  70.16  71.98  75.42 2000.0    1.0\n",
-      "score_predict[2]  70.28    0.06   2.65  64.96  68.54   70.3  72.09  75.45 2000.0    1.0\n",
-      "score_predict[3]   70.1    0.06   2.57  65.17  68.27   70.1  71.85  75.09 2000.0    1.0\n",
-      "lp__             -151.5    0.15    4.3 -161.2 -154.1 -151.2 -148.4 -143.8  830.0    1.0\n",
-      "\n",
-      "Samples were drawn using NUTS at Sun Aug 13 21:59:33 2017.\n",
-      "For each parameter, n_eff is a crude measure of effective sample size,\n",
-      "and Rhat is the potential scale reduction factor on split chains (at \n",
-      "convergence, Rhat=1).\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_09b67b94dc836f93d73b5592b851118d NOW.\n"
      ]
     }
    ],
    "source": [
-    "# \n",
+    "stan_model = StanModel(model_code=code);\n",
+    "print 'done with compilation'\n",
+    "for p_id in [24502]:\n",
+    "    players_df = util.pd_from_sql(p_sqlTxt, [year, p_id])\n",
+    "    y_all = [players_df[sg].as_matrix() for sg in['tee', 'approach', 'around', 'tee'] ]\n",
+    "    s_coefs = [sg_coef_map[i] for i in players_df['permanent_tournament_id'].as_matrix()]\n",
+    "    for j in range(0, len (s_coefs) - num_scores):\n",
+    "        y = [y_all[m][j:j+num_scores] for m in range(0,4)]\n",
+    "        s_coef = s_coefs[j+num_scores]\n",
+    "        data = { 'N': len (y[0]), 'y': y, 'sg_n' : 4, 's_coef' : s_coef }\n",
+    "        fit = stan_model.sampling(data=data, iter=1000, chains=4)\n",
+    "        print fit\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 4):\n",
+    "    print i\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's_coef' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-----------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-82-50d308e83f23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;34m'sg_n'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0;34m's_coef'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0ms_coef\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m }\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 's_coef' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "code = '''\n",
-    "data {\n",
-    "    int<lower=2> N;\n",
-    "    matrix[4,N] y;\n",
-    "    int<lower=2> N_PRED;\n",
-    "    real s_base;\n",
-    "}\n",
-    "parameters {\n",
-    "    matrix[4,N_SEG] alpha;\n",
-    "    vector[4] beta;\n",
-    "    vector<lower=0>[4] sigma;\n",
-    "    matrix[4,N_PRED] y_tilda;\n",
-    "} \n",
-    "model {\n",
-    "    for (k in 1:4) {\n",
-    "        for (n in 2:N) {\n",
-    "            y[k][n] ~ normal(alpha[k][m]+ beta[k] * y[k][n-1], sigma[k]);\n",
-    "        }\n",
-    "    }\n",
-    "    for (j in 1:4) {\n",
-    "        y_tilda[j][1] ~ normal(alpha[j][N_SEG]+ beta[j] * y[j][N], sigma[j]);\n",
-    "        for (i in 2:N_PRED) {\n",
-    "            y_tilda[j][i] ~ normal(alpha[j][N_SEG] + beta[j]* y_tilda[j][i-1], sigma[j]);\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "generated quantities {\n",
-    "      vector[N_PRED] score_predict;\n",
-    "      for (l in 1:N_PRED) {\n",
-    "        score_predict[l] = s_base - y_tilda[1][l] - y_tilda[2][l] - y_tilda[3][l] - y_tilda[4][l];\n",
-    "    }\n",
-    "}\n",
     "\n",
-    "'''\n",
+    "\n",
     "data = {\n",
     "    'N': len (y[0]),\n",
     "    'y': y,\n",
-    "    'N_PRED' :1, \n",
-    "    's_base' : 71.571\n",
+    "    'sg_n' : 4,\n",
+    "    's_coef' : s_coef\n",
     "}\n",
     "\n",
     "fit = pystan.stan(model_code=code, data=data, iter=1000, chains=4)\n",
